--- a/sass/components/_cosials.scss
+++ b/sass/components/_cosials.scss
@@ -1,10 +1,10 @@
 
-.socials-list{
+.socials{
   justify-content: center;
   display: flex;
   }
 
-.socials-link{
+.socials__link{
  color:#AFB1B8;
   width: 100%;
   height: 100%;
@@ -21,14 +21,14 @@
 
 }
 
-.team-socials-socials__item{
+.socials__item{
   width: 44px;
   height: 44px;
   &:not(:last-child){
     margin-right: 10px;
   }
 }
-.socials-icon{
+.socials__icon{
   fill: currentColor;
   }
 
