--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,21 +1,23 @@
 .header{
   border-bottom: 1px solid #ECECEC;
  }
+ .header__container{
+  display: flex;
+  align-items: center;
+}
 
-
-
- .header-items__logo{
+ .logo{
   @include font($fz:26px, $lh:1.19, $fw:700);
   display:flex;
   font-family: Raleway, sans-serif;
 }
 
- .header-logo_color_light{
+ .logo_color_light{
   color: var(--accent-color);
   margin-right: 93px;
 }
   
-.header-logo_color_dark{
+.logo_color_dark{
   color: var(--title-text-color);
         
   }
@@ -37,8 +39,11 @@
       margin-right: 50px;
       }   
   }             
-      
-.current::after{
+  .header-list__link__current{
+    color: var(--accent-color);
+    }     
+
+  .header-list__link__current::after{
   content: '';
   position: absolute;
   left: 0;
@@ -46,6 +51,7 @@
   display: block;
   width: 100%;
   height: 4px;
+  border-radius: 2px;
   background-color: var(--accent-color);
         
   }
@@ -62,14 +68,9 @@
       color: var(--accent-color);
   }
     }
-.current{
-  color: var(--accent-color);
-  }
-.main-header{
-  display: flex;
-  align-items: center;
-}
-.contacs-mail__link{
+
+
+.contacs__link{
  @include font($lh:0.02em);
   display: flex;
   align-items:center;
@@ -87,7 +88,7 @@
   margin-left: auto; 
   display: flex;
 }
-.contacs-header__contacs{
+.contacs__items{
   display: flex;
   align-items:center;
     &:not(:last-child){
@@ -95,13 +96,13 @@
     }
   }
  
-.mail-icon{
+.contacs__icon{
   margin-right: 10px;
   fill: currentColor;
 }
-.phone-icon{
-    margin-right: 10px;
-    fill: currentColor;
-} 
+
+
+      
+
 
       
