--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -27,8 +27,9 @@
    }
    
   }
-   
-.portfolio {                
+ 
+
+  .portfolio {                
   margin-left:-30px;
   margin-top: -30px; 
   display: flex;
@@ -50,8 +51,12 @@
     1px 4px 6px #00000029
     }
   }
-    
-.portfolio-desc{
+  .cards:hover .portfolio-link,
+  .cards:focus .portfolio-link{
+  color:rgba(47, 48, 50, 0.4),rgba(47, 48, 50, 0.4) ;
+}  
+
+  .portfolio-desc{
   @include font($fz:18px, $lh:1.55, $fw:400);
   position: absolute;
   top: 0;
@@ -64,16 +69,20 @@
   overflow: hidden;
   transform: translateY(100%);
   transition: transform 250ms var(--timing-function);
-  }
+  //  &:hover .portfolio-desc,
+  //  &:focus .portfolio-desc{
+  //   transform: translateY(0%);
+  // }
+}
 .portfolio-items:hover .portfolio-desc,
 .portfolio-items:focus .portfolio-desc{
   transform: translateY(0%);
-  }
+}
      
 .cards:hover .portfolio-link,
 .cards:focus .portfolio-link{
   color:rgba(47, 48, 50, 0.4),rgba(47, 48, 50, 0.4) ;
-  }
+}
 .cards-thumb{
   position: relative;
   overflow: hidden;
@@ -93,4 +102,5 @@
    
 .portfolio-content{
   padding:20px 24px 20px 24px;
-}
+  border-bottom:1px solid #EEEEEE;
+ }
