--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,37 +1,39 @@
-.section-team{
+.section_great_background{
   background-color: #F5F4FA;
   }
-.team-title{ 
+.section__title{ 
   @include font($fz:36px, $lh:1.16, $fw:700);
   margin-bottom: 50px;
   text-align: center; 
 } 
  
-.team-items{ 
+.team{ 
   display: flex;
   margin-left: -30px; 
  }
-.team-items> .team-items-team__img{ 
-  flex-basis: calc(100% /4 -30px); 
+ .team__item{ 
+  flex-basis: calc(100% / 4 - 30px); 
   margin-left:30px; 
-  border-bottom-left-radius: 4px; 
-  border-bottom-right-radius: 4px;
-   background-color: var(--primary-white-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+  0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  background-color: var(--primary-white-color);
+
  }  
 
-.team-items-present__team{
+.team__title{
   @include font($fz:16px, $lh:1.18, $fw:500);
   color: var(--title-text-color); 
  
 }
 
-.team-items-team__text{
+.team__text{
   @include font($fz:16px, $lh:1.12,$fw:400);
   color: var(--secondary-color);  
   margin-top: 10px;
   margin-bottom: 16px;
 }
-.team-items-card__thumb{
+.team__thumb{
   align-items:center;
   padding-top: 30px;
   padding-bottom: 30px;
