--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -98,7 +98,10 @@
     color: var( --secondary-color);
   }  
    
- 
+  .portfolio-content{
+    padding:20px 24px 20px 24px;
+    border-bottom:1px solid #EEEEEE;
+   }
    
 .portfolio-content{
   padding:20px 24px 20px 24px;
