--- a/css/main.css
+++ b/css/main.css
@@ -991,4 +991,9 @@ img {
 .portfolio-content {
   padding: 20px 24px 20px 24px;
   border-bottom: 1px solid #EEEEEE;
+}
+
+.portfolio-content {
+  padding: 20px 24px 20px 24px;
+  border-bottom: 1px solid #EEEEEE;
 }/*# sourceMappingURL=main.css.map */
