--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -28,7 +28,7 @@
    &:focus{
    fill: var(--accent-color);
  }
- .modal-icon{
+ .modal__icon{
    width: 18px;
    height: 18px;
    fill: #000000;
@@ -43,21 +43,21 @@
 .modal-form{
    padding: 35px;
  }
-  .modal-form-modal__form-field{
+  .modal-form__field{
   margin-bottom: 12px;
  
  
  }
  
- .modal-form-modal__check-field{
+ .modal-form__check{
    margin-bottom: 30px;
  }
- .modal-form-modal__comments-field{
+ .modal-form__wrapper{
   margin-bottom: 20px;
  
  }
  
- .modal-form-input{
+ .modal-form__input{
   height: 40px;
   width:100%;
   border: 1px solid rgba(33,33,33,0.2);
@@ -68,11 +68,14 @@
    &:focus{
     border: 1px solid var(--accent-color);
     outline: none; 
+    &:focus + .modal-form__icon{
+      fill: var(--accent-color);
+    }   
   } 
-     
- }
- .modal-form-input:focus + .modal-form-label,
- .modal-form-input:not(:placeholder-shown) + .modal-form-label{
+
+}
+ .modal-form__input:focus + .modal-form__label,
+ .modal-form__input:not(:placeholder-shown) + .modal-form__label{
   transform: translateY(-50px);
  }
  
@@ -96,7 +99,7 @@
    border: 0;
  }
  
- .modal-form-label{
+ .modal-form__label{
    @include font($fz:12px, $lh:1.16, $fw:400, $ls:0.01em);
    display: block;
    text-align: left;
@@ -126,7 +129,7 @@
    text-align: left;
  
  }
- .modal-form-icon{
+ .modal-form__icon{
    position: absolute;
    left: 12px;
    top: 50%;
@@ -135,16 +138,14 @@
    fill: currentColor;
    cursor: pointer;
  }
- .modal-form-input:focus + .modal-form-icon{
-   fill: var(--accent-color);
- }
+
  
  .input-wrap{
    display: block;
    position: relative;
  
  }
- .modal-coment{
+ .modal-form__coment{
    @include font($fz:12px, $lh:1.16, $fw:400, $ls:0.01em);
    display: block;
    width: 100%;
@@ -155,17 +156,15 @@
    resize: none;
    color: var(--secondary-color);
    text-align: left;
-   &:focus + .modal-form-label,
-   &:not(:placeholder-shown) + .modal-form-label{
+   &:focus + .modal-form__label,
+   &:not(:placeholder-shown) + .modal-form__label{
    transform:translateY(-50px);
  }
  }
  
-//  .modal-coment:focus + .modal-form-label,
-//  .modal-coment:not(:placeholder-shown) + .modal-form-label{
-//    transform:translateY(-50px);
-//  }
- .check-label{
+
+ 
+  .modal-form-check__label{
    @include font($lh:1.7, $fw:400);
    display: flex;
    justify-content: center;
@@ -188,19 +187,19 @@
     transition: background 250ms var(--timing-function);
   }
   
-  .checkbox:checked + .check-label::before{
+  .checkbox:checked + .modal-form-check__label::before{
     background: var(--accent-color);
     background-image: url("../images/check.svg");
    
   }
  }
  
-.checkbox:checked + .check-label::before{
+.checkbox:checked + .modal-form-check__label::before{
    background: var(--accent-color);
    background-image: url("../images/check.svg");
-  
- }
-.label-item{
+  }
+
+  .modal-form-check-label__item{
   color: var(--accent-color);
  
  
