--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -1,15 +1,15 @@
-.filter-list{
+.section-filter__list{
   margin-bottom: 50px;
   justify-content: center; 
   display: flex;
   color: var(--title-text-color); 
 }
 
-.filter-item:not(:last-child){
+.section-filter__item:not(:last-child){
   margin-right: 8px; 
     }
   
-.filter-button{
+.section-filter__button{
  @include font($fz:16px, $lh:1.62, $fw:500);
   border:transparent;
   cursor:pointer;
@@ -36,13 +36,16 @@
   flex-wrap: wrap;
     }
        
-.portfolio-items{
-  
+.portfolio__items{
   flex-basis:calc(100% / 3 -30px);
   margin-left:30px;
-  margin-top: 30px;  
+  margin-top: 30px; 
+   &:hover .portfolio__desc,
+   &:focus .portfolio__desc{
+    transform: translateY(0%);
   } 
-.portfolio-link{
+}
+  .portfolio__link{
   display: block;
   text-decoration: none;
     &:hover,
@@ -50,13 +53,15 @@
     box-shadow:0px 1px 1px rgba(0,0,0,0.12), 0px 4px 4px rgba(0,0,0,0.06),
     1px 4px 6px #00000029
     }
+    .portfolio__cards:hover &,
+    .portfolio__cards:focus &{
+    color:rgba(47, 48, 50, 0.4),rgba(47, 48, 50, 0.4) ;
+  }  
   }
-  .cards:hover .portfolio-link,
-  .cards:focus .portfolio-link{
-  color:rgba(47, 48, 50, 0.4),rgba(47, 48, 50, 0.4) ;
-}  
 
-  .portfolio-desc{
+
+
+  .portfolio__desc{
   @include font($fz:18px, $lh:1.55, $fw:400);
   position: absolute;
   top: 0;
@@ -69,30 +74,21 @@
   overflow: hidden;
   transform: translateY(100%);
   transition: transform 250ms var(--timing-function);
-  //  &:hover .portfolio-desc,
-  //  &:focus .portfolio-desc{
-  //   transform: translateY(0%);
-  // }
+
 }
-.portfolio-items:hover .portfolio-desc,
-.portfolio-items:focus .portfolio-desc{
-  transform: translateY(0%);
-}
+
      
-.cards:hover .portfolio-link,
-.cards:focus .portfolio-link{
-  color:rgba(47, 48, 50, 0.4),rgba(47, 48, 50, 0.4) ;
-}
-.cards-thumb{
+
+.portfolio-cards__thumb{
   position: relative;
   overflow: hidden;
 }
     
-.portfolio-title{
+.portfolio__title{
   @include font($fz:18px, $lh:2.0, $fw:700, $ls:0.06em);
   color: var(--title-text-color);
 } 
-.portfolio-text{
+.portfolio__text{
    @include font($fz:16px, $lh:1.87, $fw:400);
     margin-top: 4px;
     color: var( --secondary-color);
@@ -100,7 +96,7 @@
    
  
    
-.portfolio-content{
+.portfolio__content{
   padding:20px 24px 20px 24px;
   border-bottom:1px solid #EEEEEE;
  }
