--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -9,9 +9,9 @@ display: flex;
 align-items:baseline;
 }
 
-// .footer__wrapper{
-// flex-grow: 1;
-// }
+.footer__wrapper{
+flex-grow: 1;
+}
 
 .logo_size_n{
  margin-bottom: 20px;  
@@ -34,19 +34,17 @@ align-items:baseline;
 }
 
 
-.footer__item .link{ 
 
-color: rgba(255, 255, 255, 0.6); 
-  font-size: 14px;
-  line-height: 1.17; 
-  font-style: normal;  
-}
 .footer__item:not(:last-child){
 margin-bottom: 9px;
 }
 
 
 .footer__link{
+  color: rgba(255, 255, 255, 0.6); 
+  font-size: 14px;
+  line-height: 1.17; 
+  font-style: normal;
   transition: color 250ms var(--timing-function);
   &:hover,
   &:focus{
